--- a/site/index.html
+++ b/site/index.html
@@ -34,7 +34,7 @@
 
 
             <div style="display: flex; flex-direction: row; width: 100%; margin-top: 5px; align-items: flex-start; justify-self: center; justify-content: center">
-                <label for="seed">Seed: </label>
+                <label for="seed" style="align-self: center">Seed: </label>
                 <input id="seed" type="text" >
             </div>
         </div>
