--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,7 @@
 
 <script type="module">
     await cheerpjInit({version: 17});
-    const lib = await cheerpjRunLibrary("/app/target/duke-2025.11.09-uber.jar");
+    const lib = await cheerpjRunLibrary("/app/duke-2025.11.09-uber.jar");
     const Duke = await lib.dev.mccue.duke.Duke;
     const ImageIO = await lib.javax.imageio.ImageIO;
     const ByteArrayOutputStream = await lib.java.io.ByteArrayOutputStream;
