be very clear that I do not speak on behalf of the trademark owners of Java

--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
 <div id="duke-generator" style="display: flex; flex-direction: column; align-items: center">
     <div style="display: flex; flex-direction: column; align-items: center; width: 100%">
 
-        <h1>Java Mascot Generator</h1>
+        <h1>Java Mascot Generator<sub><p style="font-size: 12px; align-self: center; text-align: center">(unofficial)</p></sub></h1>
         <p>Powered by <a href="https://cheerpj.com/">CheerpJ</a></p>
 
         <div id="duke" style="width: 260px; height: 260px; border-color: black; border-width: 2px; padding: 15px">
